--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+2.1.1
+- added more tracing (touch /tmp/check_mysql_health.trace to watch)
+
 2.1 
 - parameter --lookback uses custom intervals for _now-values
 
