--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,13 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
-2.1.1
+2.1.2 2010-06-10
+- changed statements for 4.x compatibility (show variables like) (Thanks Florian)
+
+2.1.1 2010-03-30
 - added more tracing (touch /tmp/check_mysql_health.trace to watch)
 - fixed a bug in master-slave modes, so it outputs a more meaningful error message (Thanks Will Oberman)
+- fixed a typo (Thanks Larsen)
 
 2.1 
 - parameter --lookback uses custom intervals for _now-values
