*fix a bug in the pnp template

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+2.1.2.1
+- fix a bug in the pnp template
+
 2.1.2 2010-06-10
 - changed statements for 4.x compatibility (show variables like) (Thanks Florian)
 
