--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 2.1.3
 - added mode open-files
 - fix a bug in the pnp template
+- add extra-opts
 
 2.1.2 2010-06-10
 - changed statements for 4.x compatibility (show variables like) (Thanks Florian)
