--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+2.1.5.2 2011-06-03
+- sites in an OMD (http://omdistro.org) environment have now private statefile directories
+
 2.1.5.1 2011-01-03
 - bugfix in --mode sql (numeric vs. regexp result)
 
