add --labelformat so perfdata labels are shortended to 19 chars for groundwork fix a bug in save_statefile (statefilesdir with capital letters are now ok)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+2.1.6 2011-08-12
+- fix a bug with statefilesdir and capital letters
+- add --labelformat so that groundwork no longer complains (max label length is 19 characters)
+
 2.1.5.2 2011-06-03
 - sites in an OMD (http://omdistro.org) environment have now private statefile directories
 
