- single ticks around the --name argument under Windows CMD will be removed auto matically

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,10 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
-2.1.8 2011-09-13
+2.1.8 2011-09-29
 - new parameters --mycnf and --mycnfgroup 
+- single ticks around the --name argument under Windows CMD will be removed auto
+matically
 
 2.1.7 2011-08-23
 - innodb modes now detect problems with the innodb engine
