--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+
+2.1.8.1 2012-01-21
+- bugfix in timeout-alarm handling under windows
+- fix warnings for newest perl versions
+
 2.1.8 2011-09-29
 - new parameters --mycnf and --mycnfgroup 
 - single ticks around the --name argument under Windows CMD will be removed auto
