--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_mysql_health plugin #
 ###############################################
 
+2.1.9.2 2014-12-22
+- bugfix in InnoDB initialization & versions > 5.6.1 (Thanks Jorg Veit)
+
 2.1.9.1 2014-06-12
 - add connections_aborted, open_files to the pnp template (Thanks Simon Meggle)
 
