--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 3.0.0.2
+  default --lookback 3600 only if not given on the commandline
+  fix version string
 * 3.0.0.1
   default --lookback 3600
 * 3.0
